# log-a-saurus

./: .env  .gitignore  :w  Cargo.toml  Dockerfile  README.md  artillery.yml  compose.yml
appendlogs/: checkpoint
migration/: init.sql
src/: log.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/log_processor/: ingestion_server.rs  ingestion_worker.rs  mod.rs
src/query_client/: mod.rs
