[package]
name = "logsaurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.34.0", features = ["full"]}
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"
dotenvy = "0.15.7"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"]}
